Fix build on AIX and with Solaris Studio 12u4 in 12u after HarfBuzz 2.3.1 upgrade

XMLWordPrintable

    • master
    • solaris, aix

      The backport of JDK-8210782 - Upgrade HarfBuzz to the latest 2.3.1 - broke the build on AIX and on Solaris when using the Oracle Studio 12u4 compiler. This should be fixed.

            Assignee:
            Christoph Langer
            Reporter:
            Christoph Langer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: