src/java.desktop/share/native/libfontmanager/harfbuzz/hb-subset-cff-common.hh
@@ -280,6 +280,10 @@ struct flatten_param_t
 {
   str_buff_t     &flatStr;
   bool  drop_hints;
+
+  // Solaris: OS12u4 complains about "A class with a reference member lacks a user-defined constructor"
+  // so provide the constructor
+  flatten_param_t(str_buff_t& sbt, bool dh) : flatStr(sbt), drop_hints(dh) {}
 };
 
 template <typename ACC, typename ENV, typename OPSET>
@@ -305,7 +309,9 @@ struct subr_flattener_t
         return false;
       cs_interpreter_t<ENV, OPSET, flatten_param_t> interp;
       interp.env.init (str, acc, fd);
-      flatten_param_t  param = { flat_charstrings[i], drop_hints };
+      // Solaris: OS12u4 does not like the C++11 style init
+      // flatten_param_t  param = { flat_charstrings[i], drop_hints };
+      flatten_param_t  param(flat_charstrings[i], drop_hints);
       if (unlikely (!interp.interpret (param)))
         return false;
     }
